Removing the -Werror from root make file and adding it to dal. Dal has many unused variables and -Werror will cause all those warnings to be reported as errors

--- a/drivers/gpu/drm/amd/dal/Makefile
+++ b/drivers/gpu/drm/amd/dal/Makefile
@@ -17,6 +17,8 @@ subdir-ccflags-y += -DBUILD_FEATURE_TIMING_SYNC=0
 
 DAL_LIBS = amdgpu_dm dc	modules/freesync
 
+KBUILD_CFLAGS += -Wno-error
+
 AMD_DAL = $(addsuffix /Makefile, $(addprefix $(FULL_AMD_DAL_PATH)/,$(DAL_LIBS)))
 
 include $(AMD_DAL)
